excercises/excercise1
 b = Beer.first
  Beer Load (0.2ms)  SELECT  "beers".* FROM "beers"  ORDER BY "beers"."id" ASC LIMIT 1
#<Beer id: 1, name: "Iso 3", style: "Lager", brewery_id: 1, created_at: "2015-01-14 14:11:28", updated_at: "2015-01-14 14:11:28">

>> b.ratings.create score:10
   (0.1ms)  begin transaction
  SQL (0.3ms)  INSERT INTO "ratings" ("score", "beer_id", "created_at", "updated_at") VALUES (?, ?, ?, ?)  [["score", 10], ["beer_id", 1], ["created_at", "2015-01-20 17:12:34.828652"], ["updated_at", "2015-01-20 17:12:34.828652"]]
   (15.2ms)  commit transaction
#<Rating id: 1, score: 10, beer_id: 1, created_at: "2015-01-20 17:12:34", updated_at: "2015-01-20 17:12:34">

>> b.ratings.create score:17
   (0.1ms)  begin transaction
  SQL (0.2ms)  INSERT INTO "ratings" ("score", "beer_id", "created_at", "updated_at") VALUES (?, ?, ?, ?)  [["score", 17], ["beer_id", 1], ["created_at", "2015-01-20 17:12:40.644641"], ["updated_at", "2015-01-20 17:12:40.644641"]]
#<Rating id: 2, score: 17, beer_id: 1, created_at: "2015-01-20 17:12:40", updated_at: "2015-01-20 17:12:40">

   (17.9ms)  commit transaction
>> b.ratings.create score:21
   (0.1ms)  begin transaction
  SQL (0.2ms)  INSERT INTO "ratings" ("score", "beer_id", "created_at", "updated_at") VALUES (?, ?, ?, ?)  [["score", 21], ["beer_id", 1], ["created_at", "2015-01-20 17:12:46.378108"], ["updated_at", "2015-01-20 17:12:46.378108"]]
   (3.7ms)  commit transaction
#<Rating id: 3, score: 21, beer_id: 1, created_at: "2015-01-20 17:12:46", updated_at: "2015-01-20 17:12:46">

>> c = new Brewery name:"BrewDog", year:2007
NoMethodError: undefined method `Brewery' for main:Object
	from (irb):27
	from /home/sariraut/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/railties-4.2.0/lib/rails/commands/console.rb:110:in `start'
	from /home/sariraut/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/railties-4.2.0/lib/rails/commands/console.rb:9:in `start'
	from /home/sariraut/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/railties-4.2.0/lib/rails/commands/commands_tasks.rb:68:in `console'
	from /home/sariraut/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/railties-4.2.0/lib/rails/commands/commands_tasks.rb:39:in `run_command!'
	from /home/sariraut/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/railties-4.2.0/lib/rails/commands.rb:17:in `<top (required)>'
	from /home/sariraut/Documents/Ruby/ratebeer/bin/rails:4:in `require'
	from /home/sariraut/Documents/Ruby/ratebeer/bin/rails:4:in `<top (required)>'
	from -e:1:in `load'
	from -e:1:in `<main>'

>> c = Brewery.create name:"BrewDog", year:2007
   (0.1ms)  begin transaction
  SQL (0.3ms)  INSERT INTO "breweries" ("name", "year", "created_at", "updated_at") VALUES (?, ?, ?, ?)  [["name", "BrewDog"], ["year", 2007], ["created_at", "2015-01-20 17:16:43.351185"], ["updated_at", "2015-01-20 17:16:43.351185"]]
#<Brewery id: 5  , name:  (14.9ms)"BrewDog"  , year: commit transaction2007
, created_at: "2015-01-20 17:16:43", updated_at: "2015-01-20 17:16:43">

>> c.beers.create name:"Punk IPA", style:"IPA"
   (0.1ms)  begin transaction
  SQL (0.3ms)  INSERT INTO "beers" ("name", "style", "brewery_id", "created_at", "updated_at") VALUES (?, ?, ?, ?, ?)  [["name", "Punk IPA"], ["style", "IPA"], ["brewery_id", 5], ["created_at", "2015-01-20 17:20:26.149919"], ["updated_at", "2015-01-20 17:20:26.149919"]]
#<Beer id: 12, name: "Punk IPA", style: "IPA", brewery_id: 5, created_at: "2015-01-20 17:20:26", updated_at: "2015-01-20 17:20:26">

   (4.2ms)  commit transaction
>> c.beers.create name:"Nanny State", style:"lowalcohol"
   (0.1ms)  begin transaction
  SQL (0.3ms)  INSERT INTO "beers" ("name", "style", "brewery_id", "created_at", "updated_at") VALUES (?, ?, ?, ?, ?)  [["name", "Nanny State"], ["style", "lowalcohol"], ["brewery_id", 5], ["created_at", "2015-01-20 17:21:28.070461"], ["updated_at", "2015-01-20 17:21:28.070461"]]
#<Beer id: 13, name: "Nanny State", style: "lowalcohol", brewery_id: 5, created_at: "2015-01-20 17:21:28", updated_at: "2015-01-20 17:21:28">

   (6.3ms)  commit transaction
>> __.ratings.create score:10
NameError: undefined local variable or method `__' for main:Object
	from (irb):35
	from /home/sariraut/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/railties-4.2.0/lib/rails/commands/console.rb:110:in `start'
	from /home/sariraut/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/railties-4.2.0/lib/rails/commands/console.rb:9:in `start'
	from /home/sariraut/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/railties-4.2.0/lib/rails/commands/commands_tasks.rb:68:in `console'
	from /home/sariraut/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/railties-4.2.0/lib/rails/commands/commands_tasks.rb:39:in `run_command!'
	from /home/sariraut/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/railties-4.2.0/lib/rails/commands.rb:17:in `<top (required)>'
	from /home/sariraut/Documents/Ruby/ratebeer/bin/rails:4:in `require'
	from /home/sariraut/Documents/Ruby/ratebeer/bin/rails:4:in `<top (required)>'
	from -e:1:in `load'
	from -e:1:in `<main>'

>> -

>> $_.ratings.create score:10
SyntaxError: (irb):39: syntax error, unexpected tLABEL, expecting end-of-input
$_.ratings.create score:10
                        ^
	from /home/sariraut/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/railties-4.2.0/lib/rails/commands/console.rb:110:in `start'
	from /home/sariraut/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/railties-4.2.0/lib/rails/commands/console.rb:9:in `start'
	from /home/sariraut/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/railties-4.2.0/lib/rails/commands/commands_tasks.rb:68:in `console'
	from /home/sariraut/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/railties-4.2.0/lib/rails/commands/commands_tasks.rb:39:in `run_command!'
	from /home/sariraut/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/railties-4.2.0/lib/rails/commands.rb:17:in `<top (required)>'
	from /home/sariraut/Documents/Ruby/ratebeer/bin/rails:4:in `require'
	from /home/sariraut/Documents/Ruby/ratebeer/bin/rails:4:in `<top (required)>'
	from -e:1:in `load'
	from -e:1:in `<main>'

>> c.beers.all.ratings.create score:12
NoMethodError:   Beer Load (0.4ms)  SELECT "beers".* FROM "beers" WHERE "beers"."brewery_id" = ?  [["brewery_id", 5]]
undefined method `ratings' for #<Beer::ActiveRecord_AssociationRelation:0x007f37fef71038>
	from /home/sariraut/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/activerecord-4.2.0/lib/active_record/relation/delegation.rb:136:in `method_missing'
	from /home/sariraut/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/activerecord-4.2.0/lib/active_record/relation/delegation.rb:99:in `method_missing'
	from (irb):41
	from /home/sariraut/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/railties-4.2.0/lib/rails/commands/console.rb:110:in `start'
	from /home/sariraut/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/railties-4.2.0/lib/rails/commands/console.rb:9:in `start'
	from /home/sariraut/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/railties-4.2.0/lib/rails/commands/commands_tasks.rb:68:in `console'
	from /home/sariraut/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/railties-4.2.0/lib/rails/commands/commands_tasks.rb:39:in `run_command!'
	from /home/sariraut/.rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/railties-4.2.0/lib/rails/commands.rb:17:in `<top (required)>'
	from /home/sariraut/Documents/Ruby/ratebeer/bin/rails:4:in `require'
	from /home/sariraut/Documents/Ruby/ratebeer/bin/rails:4:in `<top (required)>'
	from -e:1:in `load'
	from -e:1:in `<main>'

>> c.beers.last.ratings.create score:12
  Beer Load (0.2ms)  SELECT  "beers".* FROM "beers" WHERE "beers"."brewery_id" = ?  ORDER BY "beers"."id" DESC LIMIT 1  [["brewery_id", 5]]
   (0.1ms)  begin transaction
  SQL (0.2ms)  INSERT INTO "ratings" ("score", "beer_id", "created_at", "updated_at") VALUES (?, ?, ?, ?)  [["score", 12], ["beer_id", 13], ["created_at", "2015-01-20 17:27:09.219103"], ["updated_at", "2015-01-20 17:27:09.219103"]]
#<Rating id: 4, score: 12, beer_id: 13, created_at: "2015-01-20 17:27:09", updated_at: "2015-01-20 17:27:09">

   (6.5ms)  commit transaction
>> c.beers.first.ratings.create score:11
  Beer Load (0.3ms)  SELECT  "beers".* FROM "beers" WHERE "beers"."brewery_id" = ?  ORDER BY "beers"."id" ASC LIMIT 1  [["brewery_id", 5]]
   (0.1ms)  begin transaction
  SQL (0.2ms)  INSERT INTO "ratings" ("score", "beer_id", "created_at", "updated_at") VALUES (?, ?, ?, ?)  [["score", 11], ["beer_id", 12], ["created_at", "2015-01-20 17:27:20.974697"], ["updated_at", "2015-01-20 17:27:20.974697"]]
#<Rating id: 5, score: 11, beer_id: 12, created_at: "2015-01-20 17:27:20", updated_at: "2015-01-20 17:27:20">

   (4.5ms)  commit transaction
>> c.beers.last.ratings.create score:18
  Beer Load (0.2ms)  SELECT  "beers".* FROM "beers" WHERE "beers"."brewery_id" = ?  ORDER BY "beers"."id" DESC LIMIT 1  [["brewery_id", 5]]
   (0.1ms)  begin transaction
  SQL (0.2ms)  INSERT INTO "ratings" ("score", "beer_id", "created_at", "updated_at") VALUES (?, ?, ?, ?)  [["score", 18], ["beer_id", 13], ["created_at", "2015-01-20 17:27:48.751741"], ["updated_at", "2015-01-20 17:27:48.751741"]]
   (15.3ms)  commit transaction
#<Rating id: 6, score: 18, beer_id: 13, created_at: "2015-01-20 17:27:48", updated_at: "2015-01-20 17:27:48">

>> c.beers.first.ratings.create score:3
  Beer Load (0.2ms)  SELECT  "beers".* FROM "beers" WHERE "beers"."brewery_id" = ?  ORDER BY "beers"."id" ASC LIMIT 1  [["brewery_id", 5]]
   (0.1ms)  begin transaction
  SQL (0.2ms)  INSERT INTO "ratings" ("score", "beer_id", "created_at", "updated_at") VALUES (?, ?, ?, ?)  [["score", 3], ["beer_id", 12], ["created_at", "2015-01-20 17:27:55.480782"], ["updated_at", "2015-01-20 17:27:55.480782"]]
   (6.7ms)  commit transaction
#<Rating id: 7, score: 3, beer_id: 12, created_at: "2015-01-20 17:27:55", updated_at: "2015-01-20 17:27:55">

